[package]
name = "monoff"
authors = ["Tim Martin"]
version = "0.1.0"
edition = "2021"
description = "Turns off monitors on Windows"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = "0.1.12"
