[package]
name = "monoff"
authors = ["Tim Martin"]
repository = "https://github.com/t-mart/monoff"
documentation = "https://docs.rs/monoff"
homepage = "https://github.com/t-mart/monoff"
version = "0.4.7"
edition = "2021"
description = "Turns off monitors on Windows"
license = "MIT"
keywords = ["monitor", "display", "off", "windows"]
categories = ["accessibility", "command-line-utilities", "hardware-support"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }

[dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
winres = "0.1.12"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
